--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon --watch ./server server/index.js"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "express": "^4.18.2"
   },
   "devDependencies": {
