added workouts home page workoutle login page etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,36 @@
 {
     "cSpell.words": [
+        "Acro",
         "adipiscing",
         "amet",
-        "johnsmith"
+        "Anusara",
+        "Ashtanga",
+        "Bikram",
+        "breathwork",
+        "Burpees",
+        "deadlift",
+        "Deadlift",
+        "Deadlifts",
+        "Glute",
+        "glutes",
+        "Hatha",
+        "HIIT",
+        "Iyengar",
+        "Jivamukti",
+        "johnsmith",
+        "kettlebell",
+        "Kettlebell",
+        "Kundalini",
+        "Nidra",
+        "Pedi",
+        "Plyometric",
+        "Rollouts",
+        "Sivananda",
+        "vinyasa",
+        "Vinyasa",
+        "Woodchoppers",
+        "Wunda",
+        "Zumba"
     ],
     "liveServer.settings.port": 5501
 }
