--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -8,9 +8,11 @@
     "playwright.config.*"
   ],
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "resolveJsonModule": true,
     "types": ["node"]
   }
 }
