added the statistic page and functional searchbars

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "HIIT",
         "Iyengar",
         "Jivamukti",
+        "johndoe",
         "johnsmith",
         "kettlebell",
         "Kettlebell",
@@ -26,6 +27,7 @@
         "Plyometric",
         "Rollouts",
         "Sivananda",
+        "testuser",
         "vinyasa",
         "Vinyasa",
         "Woodchoppers",
