--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "cps493-class",
+  "name": "cps493-final",
   "version": "1.0.0",
   "description": "Workout Web App",
   "author": "",
   "license": "ISC",
-
   "scripts": {
+    "build": "npm i --production && cd client && npm i && npm run build",
     "start": "node server/index.js",
     "dev": "nodemon --watch ./server server/index.js"
   },
   "dependencies": {
     "bulma": "^0.9.4",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-
 }
