--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongo-tools": "^1.0.0",
+    "mongodb": "^6.3.0",
+    "mongodb-tools": "^1.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
