--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "bulma": "^0.9.4",
+    "nodemon": "^3.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
