--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "nodemon": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
-    "@types/node": "20.8.9",
-    "nodemon": "^3.0.2"
+    "@types/node": "20.8.9"
   }
 }
