--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "bulma": "^0.9.4",
     "nodemon": "^3.0.2",
+    "npm-run-all": "^4.1.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
