--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
