--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@oruga-ui/oruga-next": "^0.8.2",
     "bulma": "^0.9.4",
     "nodemon": "^3.0.2",
     "npm-run-all": "^4.1.5",
