--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "nodemon --watch ./server server/index.js"
   },
   "dependencies": {
+    "@oruga-ui/oruga-next": "^0.8.2",
+    "@oruga-ui/theme-oruga": "^0.2.1",
     "bulma": "^0.9.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -17,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
